; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.glob.c_pword.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.glob.c_pword.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Strbuf = type { i32 }
%struct.blk_buf = type { i32 }

@Strbuf_init = common dso_local global %struct.Strbuf zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.blk_buf*, %struct.Strbuf*)* @pword to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pword(%struct.blk_buf* %0, %struct.Strbuf* %1) #0 {
  %3 = alloca %struct.blk_buf*, align 8
  %4 = alloca %struct.Strbuf*, align 8
  %5 = alloca i32*, align 8
  store %struct.blk_buf* %0, %struct.blk_buf** %3, align 8
  store %struct.Strbuf* %1, %struct.Strbuf** %4, align 8
  %6 = load %struct.Strbuf*, %struct.Strbuf** %4, align 8
  %7 = call i32* @Strbuf_finish(%struct.Strbuf* %6)
  store i32* %7, i32** %5, align 8
  %8 = load %struct.blk_buf*, %struct.blk_buf** %3, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @bb_append(%struct.blk_buf* %8, i32* %9)
  %11 = load %struct.Strbuf*, %struct.Strbuf** %4, align 8
  %12 = bitcast %struct.Strbuf* %11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %12, i8* align 4 bitcast (%struct.Strbuf* @Strbuf_init to i8*), i64 4, i1 false)
  ret void
}

declare dso_local i32* @Strbuf_finish(%struct.Strbuf*) #1

declare dso_local i32 @bb_append(%struct.blk_buf*, i32*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
